--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <head></head>
   <body>
-    <h1>Hello Alien !</h1>
-    <img src="Krishna.jpg">
-    <a href="/html-css">HTML & CSS</a>
+    <h1>Hello. it's Aditya this side !</h1>
+    <img src="Krishna.jpg"><span>Jai Shree Krishna.</span>
+    <br>
+    <a href="/html-css/html-css.html">HTML & CSS</a>
   </body>
 </html>
