--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
   <head></head>
   <body>
-    <h1>Hello. it's Aditya this side !</h1>
-    <img src="Krishna.jpg"><span>Jai Shree Krishna.</span>
+    <h1>Hello. its Aditya this side !</h1>
+    <img src="Krishna.jpg"><span> Jai Shree Krishna.</span>
     <br>
-    <a href="/html-css/html-css.html">HTML & CSS</a>
+    <span>Here are some of my projects...</span>
+    <span>~</span><a href="/html-css/html-css.html"> HTML & CSS</a>
   </body>
 </html>
