--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head></head>
   <body>
     <h1>Hello. its Aditya this side !</h1>
-    <img src="Krishna.jpg"><span> Jai Shree Krishna.</span>
+    <img src="Krishna.jpg" height="300"><span> Jai Shree Krishna.</span>
     <br>
     <span>Here are some of my projects...</span>
     <be>
