--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
   <head></head>
   <body>
     <h1>Hello. its Aditya this side !</h1>
-    <img src="Krishna.jpg" height="300"><span> Jai Shree Krishna.</span>
-    <br>
+    <img src="Krishna.jpg" height="300">
+      <br>
+    <span> Jai Shree Krishna.</span>
+      <br>
     <span>Here are some of my projects...</span>
-    <be>
+      <br>
     <span>~</span><a href="/html-css/html-css.html"> HTML & CSS</a>
+      <br>
     <span>~</span><a href="/html-css/html-css.html"> Login Page</a>
   </body>
 </html>
