--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head></head>
   <body>
     <h1>Hello. its Aditya this side !</h1>
-    <img src="Krishna.jpg" height="300">
+    <img src="image/Krishna.jpg" height="300">
       <br>
     <span> Jai Shree Krishna.</span>
       <br><br>
