--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
       <br><br>
     <span>Here are some of my projects...</span>
       <br>
-    <span>~</span><a href="/html-css/html-css.html"> HTML & CSS</a>
+    <span>~</span><a href="/html/html.html"> HTML</a>
       <br>
-    <span>~</span><a href="/html-css/html-css.html"> Login Page</a>
+    <span>~</span><a href="/css/css.html"> CSS</a>
+      <br>
+    <span>~</span><a href="/js/js.html"> Java Script</a>
   </body>
 </html>
