--- a/html/html.html
+++ b/html/html.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>Html & CSS Projects</title>
+    <title>HTML Projects</title>
   </head>
 <body>
-  <h6>HTML CSS Project</h6>
+  <h6>HTML Project</h6>
 </body>
 </html>
