--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       <br><br>
     <span>Here are some of my projects...</span>
       <br>
-    <span>~</span><a href="/html/html.html"> HTML</a>
+    <span>~</span><a href="html/html.html"> HTML</a>
       <br>
-    <span>~</span><a href="/css/css.html"> CSS</a>
+    <span>~</span><a href="css/css.html"> CSS</a>
       <br>
-    <span>~</span><a href="/js/js.html"> Java Script</a>
+    <span>~</span><a href="js/js.html"> Java Script</a>
   </body>
 </html>
