--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-  <head></head>
+  <head>
+    <title>Aditya Web Projects !</title>
+  </head>
   <body>
     <h1>Hello. its Aditya this side !</h1>
     <img src="image/Krishna.jpg" height="300">
