--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
       <br><br>
     <span>Here are some of my projects...</span>
       <br>
-    <span>~</span><a href="html/html.html"> HTML</a>
-      <br>
-    <span>~</span><a href="css/css.html"> CSS</a>
-      <br>
-    <span>~</span><a href="js/js.html"> Java Script</a>
+    <a href="http://imadityagolu.unaux.com/study/projects/name.html"> My Projects !</a>
   </body>
 </html>
