--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <br>
     <span> Jai Shree Krishna.</span>
       <br><br>
+    <p>visit my website <a herf="http://imadityagolu.unaux.com/">click here</a> !</p>
     <span>Here are some of my projects...</span>
       <br>
     <a href="http://imadityagolu.unaux.com/study/projects/name.html"> My Projects !</a>
