--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <p>visit my website <a herf="http://imadityagolu.unaux.com/">click here</a> !</p>
     <span>Here are some of my projects...</span>
       <br>
-    <a href="http://imadityagolu.unaux.com/study/projects/name.html"> My Projects !</a>
+    -> <a href="http://imadityagolu.unaux.com/study/projects/name.html"> My Projects !</a>
   </body>
 </html>
