--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <h1>Hello. its Aditya this side !</h1>
     <img src="image/Krishna.jpg" height="300">
       <br>
-    <span> Jai Shree Krishna.</span>
-      <br><br>
-    <p>visit my website <a href="http://imadityagolu.unaux.com/">click here</a> !</p>
+    <h2> Jai Shree Krishna.</h2>
+      <br>
+    <p style="color:red">visit my website <a href="http://imadityagolu.unaux.com/">click here</a> !</p>
     <span>Here are some of my projects...</span>
       <br>
-    -> <a href="http://imadityagolu.unaux.com/study/projects/name.html"> My Projects !</a>
+    👉<a href="http://imadityagolu.unaux.com/study/projects/name.html"> My Projects !</a>
   </body>
 </html>
