--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <img src="image/Krishna.jpg" height="300">
       <br>
     <h2> Jai Shree Krishna.</h2>
-    <p style="color:red">visit my website <a href="http://imadityagolu.unaux.com/">click here</a> !</p>
+    <p style="color:red; font-size:20px">visit my website <a href="http://imadityagolu.unaux.com/">click here</a> !</p>
     <span>Here are some of my projects...</span>
       <br>
-    👉<a href="http://imadityagolu.unaux.com/study/projects/name.html"> My Projects !</a>
+    👉<a href="http://imadityagolu.unaux.com/study/projects/name.html" style="font-size:20px"> My Projects !</a>
   </body>
 </html>
