--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
       <br>
     <h2> Jai Shree Krishna 🙏</h2>
     <p style="color:red; font-size:30px">visit my website <a href="http://imadityagolu.unaux.com/">click here</a> !</p>
-    👉<a href="http://imadityagolu.unaux.com/study/projects/name.html" style="font-size:20px"> My Projects !</a>
+    👉<a href="http://imadityagolu.unaux.com/projects.php" style="font-size:20px"> My Projects !</a>
   </body>
 </html>
